--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "emulators:start": "firebase emulators:start"
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.3.1",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.2",
+    "pinia": "^2.2.6",
     "uuid": "^11.0.3",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
